fixed cta image path

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -451,7 +451,7 @@
 }
 .cta-img-box {
   background-image: linear-gradient(to right bottom, rgba(235, 151, 78, 0.35), rgba(230, 125, 34, 0.35)),
-    url(/img/eating-2.webp);
+    url(../img/eating-2.webp);
   background-size: cover;
   background-position: center;
 }
